clusters/apps/env/production/soho/owncast/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: owncast
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`owncast.${FAMILY_DOMAIN}`)"
      priority: 10
      services:
        - name: owncast-frigate
          port: 8080
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: owncast.${FAMILY_DOMAIN}
